aws_security_group.tf
resource "aws_security_group" "regular_ssh" {
    provider= "aws"
    name = "vpc for test"
    description = "Test VMs"
    vpc_id = "${aws_vpc.vpc.id}"
    tags {
        Name = "regular ssh"
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["${var.region1_routable_cidr}"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
}
